<resources>
    <string name="app_name">Hill Tracker</string>
    <!-- Menu Titles -->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_live_tracking">Live Tracking</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_settings">Settings</string>
    <string name="title_import_export">Import &amp; Export</string>

    <!-- Home Fragment Strings -->
    <plurals name="numberOfHillsWalked">
        <item quantity="one">You have walked %1$2d hill (%2$.2f%%). The hill you have walked is shown below.</item>
        <item quantity="other">You have walked %1$2d hills (%2$.2f%%). The hills you have walked are shown below.</item>
    </plurals>
    <string name="no_hills_walked">You have not walked any hills yet, go bag some!</string>
    <string name="no_hills_walked_desc">You\'ve not walked any hills yet, get out and bag some or Search for hills you\'ve walked before and claim them!</string>

    <!-- Hill Details Dialog -->
    <string name="hill_walked_height_desc">&lt;b>Height:&lt;/b> %1$.0f(m) %2$.0f(ft)</string>
    <string name="hill_walked_date_desc">&lt;b>Walked:&lt;/b> %1$1s</string>
    <string name="close">Close</string>
    <string name="hill_dialog_position">&lt;b>Latitude:&lt;/b> %1$f &lt;b>Longitude:&lt;/b> %2$f</string>
    <string name="hill_dialog_view_bagging_url">View on Hill-Bagging</string>
    <string name="hill_dialog_view_map">View on map</string>
    <string name="hill_dialog_mark_walked">Mark Walked</string>

    <!-- Search Fragment Strings -->
    <string name="no_hill_search_results">No hills match your search</string>
    <string name="hill_search_hint">Find hill by name</string>

    <!-- Preference Titles -->
    <string name="tracking_header">Live Tracking</string>
    <string name="settings_map_type_default_option">Normal</string>
    <string name="track_map_type_title">Type of Map</string>
    <string-array name="settings_map_types">
        <item>Hybrid</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="setting_map_values">
        <item>4</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Live Tracking -->
    <string name="track_plot_period">Plot period</string>
    <string name="track_plot_period_summary">Plot your position once ever %1$ss</string>
    <string name="track_bag_distance">Automatic claim distance</string>
    <string name="track_bag_distance_summary">Automatically bag hills within %1$sm</string>
    <string name="live_tracking_stop_description">Stop Live Tracking</string>
    <string name="live_tracking_start_description">Start Live Tracking</string>
    <string name="live_tracking_pause_description">Pause Live Tracking</string>
    <string name="live_tracking_enable_location_services">Please enable location services</string>
    <string name="live_tracking_bagged_hill">Automatically bagged %1$s!</string>

    <!-- Nearby Hills -->
    <string name="nearby_header">Nearby Hills</string>
    <string name="nearby_distance_title">Distance to hill</string>
    <string name="nearby_distance_summary">Show hills within %1$skm</string>
    <string name="no_hills_nearby">There are no hills nearby to show</string>

    <!-- Permission explanations -->
    <string name="perm_required_title">Permission Required</string>
    <string name="perm_fine_location_detail">Access is required to your devices fine location so that it can gain GPS coordinates while tracking a live walk. Without this permission live tracking is not possible.</string>
    <string name="perm_foreground_service_detail">Access is required to create a foreground service so that Live Tracking can update your current location</string>
    <string name="perm_external_storage_detail">Access is required to external storage to export your walked hills to CSV file.</string>
    <string name="perm_btn_request">Request Permissions</string>

    <!-- Notifications -->
    <string name="notification_text">Tracking your walking and bagging hills as you go!</string>

    <!-- Import / Export Activity -->
    <string name="import_title">Import Hills</string>
    <string name="import_hill">Import</string>
    <string name="import_hill_desc">Import walked hills from Hill-Bagging.co.uk CSV download</string>
    <string name="import_file_choose">Choose a CSV File</string>
    <string name="unable_to_import_file">Unable to import from file</string>
    <string name="import_file_success">Successfully imported walked hills.</string>
    <string name="export_hill">Export</string>
    <string name="export_hill_desc">Export walked hills to upload to Hill-Bagging.co.uk. Either copy the CSV below and paste it into the upload page on Hill-Bagging.co.uk or export it to a file.</string>
    <string name="export_button">Export</string>
    <string name="unable_to_export_file">Unable to export to file</string>
    <string name="export_file_success">Successfully exported walked hills to downloads directory.</string>
</resources>
