<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="Test">

    <com.google.android.gms.maps.MapView
        android:id="@+id/live_track_map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:clickable="true"
        android:apiKey="@string/google_maps_key" />

    <LinearLayout
        android:id="@+id/live_tracking_inprogress_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/live_track_start"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:contentDescription="@string/live_tracking_start_description"
            android:background="@null"
            android:src="@drawable/ic_record_button_black_24dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_grey" />

        <ImageButton
            android:id="@+id/live_track_stop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:contentDescription="@string/live_tracking_stop_description"
            android:background="@null"
            android:src="@drawable/ic_stop_black_24dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_grey" />

        <ImageButton
            android:id="@+id/live_track_pause"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:contentDescription="@string/live_tracking_pause_description"
            android:background="@null"
            android:src="@drawable/ic_pause_black_24dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>